--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
   <link rel="stylesheet" href="css/index.css">
 
 </head>
+<header>
+    <div id="nav-bar-top">
+        <img src="/img/lambda-black.png" alt="Lambda logo">
+        <nav>
+            <a href="#nav-bar-top" target="_blank">Home</a>
+            <a href="about.html" target="_blank">About</a>
+            <a href="#" target="_blank">Products</a>
+            <a href="#" target="_blank">Blog</a>
+            <a href="#" target="_blank">Contact</a>
+        </nav>
+    </div>
+    <img id="jumbo-image" src="/img/jumbo.jpg" alt="Another logo">
+</header>
 
 <body>
     <div class="container">
