working on about page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="nav-bar-top">
         <img src="/img/lambda-black.png" alt="Lambda logo">
         <nav>
-            <a href="#nav-bar-top" target="_blank">Home</a>
+            <a href="#nav-bar-top">Home</a>
             <a href="about.html" target="_blank">About</a>
             <a href="#" target="_blank">Products</a>
             <a href="#" target="_blank">Blog</a>
