--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
       <img src="/img/lambda-black.png" alt="Lambda logo">
       <nav>
           <a href="/index.html" target="_blank">Home</a>
-          <a href="#nav-bar-top">About</a>
+          <a href="#">About</a>
           <a href="#" target="_blank">Products</a>
           <a href="#" target="_blank">Blog</a>
           <a href="#" target="_blank">Contact</a>
@@ -84,7 +84,7 @@
       <footer>
         <nav>
           <a href="index.html" target="_blank">Home</a>
-          <a href="#nav-bar-top">About</a>
+          <a href="#">About</a>
           <a href="#">Products</a>
           <a href="#">Blog</a>
           <a href="#">Contact</a>
