--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
             <h2>Why Did It Have To Be Boxes...</h2>
             
             <div class="boxes">
-                <div class="box">Box 1</div>
-                <div class="box">Box 2</div>
-                <div class="box">Box 3</div>
-                <div class="box">Box 4</div>
-                <div class="box">Box 5</div>
-                <div class="box">Box 6</div>
-                <div class="box">Box 7</div>
-                <div class="box">Box 8</div>
-                <div class="box">Box 9</div>
-                <div class="box">Box 10</div>
+                <div class="box"><span>Box 1</span></div>
+                <div class="box"><span>Box 2</span></div>
+                <div class="box"><span>Box 3</span></div>
+                <div class="box"><span>Box 4</span></div>
+                <div class="box"><span>Box 5</span></div>
+                <div class="box"><span>Box 6</span></div>
+                <div class="box"><span>Box 7</span></div>
+                <div class="box"><span>Box 8</span></div>
+                <div class="box"><span>Box 9</span></div>
+                <div class="box"><span>Box 10</span></div>
             </div>
         
         </section>
